# rooc

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: knapsack_pipe.rs  knapsack_string_only.rs  knapsack_user_defined_data_and_fns.rs  linear_model_directly.rs  simple_knapsack.rs  source_only_knapsack.rs  user_defined_data_and_fns_knapsack.rs
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: dts.config.cjs  patchDts.js  tsconfig.json
frontend/scripts/src/: index.ts
frontend/src/: app.html  global.css
frontend/src/components/: ErrorLogger.svelte  LatexRenderer.svelte  PageTransition.svelte  PipeResultRenderer.svelte  PromptProvider.svelte  SyntaxHighlighter.svelte
frontend/src/components/editor/: Editor.svelte
frontend/src/components/icons/: PlugIn.svelte  PlugOut.svelte
frontend/src/components/inputs/: Button.svelte  ButtonLink.svelte  Input.svelte  Number.svelte  Switch.svelte  Textarea.svelte
frontend/src/components/layout/: Card.svelte  Column.svelte  ExpandableContainer.svelte  Icon.svelte  Nav.svelte  NoiseOverlay.svelte  Page.svelte  Row.svelte
frontend/src/components/misc/: FilePicker.svelte  FloatingContainer.svelte
frontend/src/components/pipe/: BinarySolutionRenderer.svelte  ConstraintsRenderer.svelte  IntegerBinarySolutionRenderer.svelte  MILPSolutionRenderer.svelte  PipeInput.svelte  PipeOptimalTableauRenderer.svelte  PipeOptimalTableauWithStepsRenderer.svelte  Var.svelte  utils.ts  (+4 more)
frontend/src/lib/: Monaco.ts  db.ts  pipePresets.ts  utils.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/stores/: Project.ts  navigationStore.ts  projectStore.ts  themeStore.ts  userProjectsStore.svelte.ts  userProjectsStore.ts
frontend/static/: manifest.json  sw.js
frontend/static/std/: index.d.ts
src/: consts.rs  functions.rs  future_grammar.pest  grammar.pest  lexer.rs  lib.rs  linear_problem.rs  linearizer.rs  macros.rs  main.rs  math_enums.rs  math_exp_enums.rs  parser.rs  rules_parser.rs  simplex.rs  standardizer.rs  transformer.rs  utils.rs
src/math/: math_enums.rs  math_utils.rs  mod.rs  operators.rs  tests.rs
src/parser/: domain_declaration.rs  grammar.pest  iterable_utils.rs  mod.rs  parser.rs  pre_exp.rs  pre_model.rs  pre_parsed_problem.rs  recursive_set_resolver.rs  rules_parser.rs  tests.rs  transformer.rs
src/parser/il/: block_functions.rs  il_exp.rs  il_problem.rs  ir_exp.rs  iterable_set.rs  mod.rs
src/parser/model_transformer/: mod.rs  model.rs  transform_error.rs  transformer_context.rs
src/parser/rules_parser/: exp_parser.rs  mod.rs  other_parser.rs
src/pipe/: macro.rs  mod.rs  pipe.rs  pipe_definitions.rs  pipe_executors.rs  pipe_runner.rs  pipe_wasm_runner.rs
src/primitives/: builtin_primitive_traits_impl.rs  consts.rs  functions.rs  graph.rs  iterable.rs  mod.rs  parameter.rs  primitive.rs  primitive_traits.rs  tests.rs  tuple.rs
src/primitives/functions/: array_functions.rs  function_traits.rs  graph_functions.rs  mod.rs  number_functions.rs  other_functions.rs
src/runtime_builtin/: mod.rs  reserved_tokens.rs  rooc_std.rs  runtime_function.rs
src/runtime_builtin/functions/: array_functions.rs  function_traits.rs  graph_functions.rs  js_function.rs  mod.rs  number_functions.rs
src/solvers/: auto_solver.rs  binary.rs  binary_solver.rs  clarabel_real.rs  common.rs  good_lp.rs  linear_integer_binary.rs  linear_integer_binary_solver.rs  linear_problem.rs  milp.rs  milp_solver.rs  mod.rs  real.rs  real_solver.rs  simplex.rs  tests.rs
src/solvers/simplex/: fractional_tableau.rs  mod.rs  optimal_tableau.rs  simplex_enums.rs  simplex_solver.rs  tableau.rs
src/traits/: latex.rs  mod.rs
src/transformers/: linear_model.rs  linearizer.rs  mod.rs  standard_linear_model.rs  standardizer.rs
src/type_checker/: mod.rs  type_checker_context.rs
tests/: math_tests.rs  parser_tests.rs  primitives_tests.rs  solver_tests.rs
thesis/: main_thesis.tex  refs.bib  uaqthesis.cls
thesis/sections/: appendix.tex  architecture.tex  background.tex  conclusions.tex  introduction.tex  language.tex  linearization.tex  parsing.tex  platform.tex  semantics.tex  solvers.tex
ts-lib/: README.md  build.js  package-lock.json  package.json  test.js  tsconfig.json  typedoc.json
ts-lib/src/: index.ts  runtime.ts
ts-lib/tests/: index.ts
(+36 files in other folders)
