[package]
name = "rooc"
authors = ["Specy <specy.dev@gmail.com>"]
homepage = "https://rooc.specy.app"
repository = "https://github.com/specy/rooc"
documentation = "https://rooc.specy.app/docs/rooc"
description = "A mixed integer linear programming modeling language to solve linear optimization models. Extensible, works in WASM and easy to use."
keywords = ["optimization", "milp", "solver", "mathematics", "linear-programming"]
categories = ["mathematics", "algorithms", "science"]
version = "0.1.17"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
num-rational = "0.4.2"
num-traits = "0.2.19"
term-table = "1.4.0"
pest = { version = "2.7.14" }
pest_derive = { version = "2.7.14", features = ["grammar-extras"] }
lazy_static = "1.5.0"
copper = "0.1.0"
indexmap = {version =  "2.6.0", features = ["serde"] }
good_lp = { version = "1.9.0", features = ["clarabel-wasm"], default-features = false }
microlp = "0.2.9"
log = "0.4.21"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.72"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.1" }


[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
